# algebraic_algorithms

./: CMakeLists.txt  eratosphen.cpp  eratosphen.h  fibonacci.cpp  fibonacci.h  main.cpp  powing.cpp  powing.h  prime_number.cpp  prime_number.h
